feat: puntos SRE cusiana

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -4714,104 +4714,74 @@
                       class="location-map-dot"></span>
                   </div>
 
-                  <div class="dots-map-2024 dots-monitoreo d-none"
+                  <div class="dots-map-2024 dots-sre d-none"
                     id="cusiana-sre-14">
-                    <span style="left: 397px; top: 304px"
-                      class="location-map-dot"></span>
-                    <span style="left: 390px; top: 320px"
-                      class="location-map-dot"></span>
-                    <span style="left: 415px; top: 307px"
-                      class="location-map-dot"></span>
-                    <span style="left: 436px; top: 310px"
-                      class="location-map-dot"></span>
-                    <span style="left: 418px; top: 328px"
-                      class="location-map-dot"></span>
-                    <span style="left: 442px; top: 320px"
-                      class="location-map-dot"></span>
-                    <span style="left: 435px; top: 347px"
-                      class="location-map-dot"></span>
-                    <span style="left: 446px; top: 339px"
-                      class="location-map-dot"></span>
-                    <span style="left: 459px; top: 330px"
-                      class="location-map-dot"></span>
-                    <span style="left: 469px; top: 320px"
-                      class="location-map-dot"></span>
-                    <span style="left: 461px; top: 352px"
-                      class="location-map-dot"></span>
-                    <span style="left: 477px; top: 342px"
-                      class="location-map-dot"></span>
-                    <span style="left: 491px; top: 330px"
-                      class="location-map-dot"></span>
-                    <span style="left: 509px; top: 320px"
-                      class="location-map-dot"></span>
-                    <span style="left: 502px; top: 343px"
-                      class="location-map-dot"></span>
-                    <span style="left: 510px; top: 333px"
-                      class="location-map-dot"></span>
-                    <span style="left: 526px; top: 324px"
-                      class="location-map-dot"></span>
-                    <span style="left: 519px; top: 343px"
-                      class="location-map-dot"></span>
-                    <span style="left: 541px; top: 328px"
-                      class="location-map-dot"></span>
-                    <span style="left: 540px; top: 343px"
-                      class="location-map-dot"></span>
-                    <span style="left: 504px; top: 368px"
-                      class="location-map-dot"></span>
-                    <span style="left: 528px; top: 369px"
-                      class="location-map-dot"></span>
-                    <span style="left: 503px; top: 385px"
-                      class="location-map-dot"></span>
-                    <span style="left: 522px; top: 397px"
-                      class="location-map-dot"></span>
-                    <span style="left: 536px; top: 388px"
-                      class="location-map-dot"></span>
-                    <span style="left: 551px; top: 378px"
-                      class="location-map-dot"></span>
-                    <span style="left: 574px; top: 366px"
-                      class="location-map-dot"></span>
-                    <span style="left: 707px; top: 311px"
-                      class="location-map-dot"></span>
-                    <span style="left: 760px; top: 336px"
-                      class="location-map-dot"></span>
-                    <span style="left: 607px; top: 380px"
-                      class="location-map-dot"></span>
-                    <span style="left: 640px; top: 393px"
-                      class="location-map-dot"></span>
-                    <span style="left: 563px; top: 427px"
-                      class="location-map-dot"></span>
-                    <span style="left: 615px; top: 444px"
-                      class="location-map-dot"></span>
-                    <span style="left: 633px; top: 429px"
-                      class="location-map-dot"></span>
-                    <span style="left: 6500px; top: 415px"
-                      class="location-map-dot"></span>
-                    <span style="left: 673px; top: 405px"
-                      class="location-map-dot"></span>
-                    <span style="left: 689px; top: 394px"
-                      class="location-map-dot"></span>
-                    <span style="left: 710px; top: 380px"
-                      class="location-map-dot"></span>
-                    <span style="left: 734px; top: 369px"
-                      class="location-map-dot"></span>
-                    <span style="left: 772px; top: 381px"
-                      class="location-map-dot"></span>
-                    <span style="left: 792px; top: 392px"
-                      class="location-map-dot"></span>
-                    <span style="left: 781px; top: 416px"
-                      class="location-map-dot"></span>
-                    <span style="left: 767px; top: 432px"
-                      class="location-map-dot"></span>
-                    <span style="left: 754px; top: 451px"
-                      class="location-map-dot"></span>
-                    <span style="left: 734px; top: 469px"
-                      class="location-map-dot"></span>
-                    <span style="left: 712px; top: 488px"
-                      class="location-map-dot"></span>
-                    <span style="left: 669px; top: 480px"
-                      class="location-map-dot"></span>
-                    <span style="left: 647px; top: 466px"
-                      class="location-map-dot"></span>
+                    <span style="left: 362px; top: 298px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 411px; top: 299px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 427px; top: 289px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 448px; top: 292px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 439px; top: 303px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 456px; top: 270px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 460px; top: 256px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 462px; top: 248px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 461px; top: 241px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 470px; top: 243px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 467px; top: 228px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 502px; top: 226px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 466px; top: 213px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 469px; top: 201px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 474px; top: 188px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 489px; top: 190px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 504px; top: 190px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 544px; top: 190px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 543px; top: 199px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 542px; top: 206px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 583px; top: 278px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 612px; top: 292px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 585px; top: 318px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 630px; top: 323px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 663px; top: 325px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 631px; top: 296px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 630px; top: 283px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 628px; top: 270px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 627px; top: 257px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 625px; top: 244px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 624px; top: 230px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 623px; top: 217px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 622px; top: 204px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 632px; top: 196px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 650px; top: 196px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 666px; top: 196px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 676px; top: 207px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 679px; top: 220px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 682px; top: 232px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 685px; top: 245px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 688px; top: 258px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 691px; top: 271px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 694px; top: 283px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 697px; top: 296px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 684px; top: 302px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 667px; top: 302px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 649px; top: 302px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 671px; top: 186px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 684px; top: 193px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 700px; top: 191px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 716px; top: 194px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 733px; top: 195px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 701px; top: 210px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 711px; top: 203px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 714px; top: 213px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 727px; top: 204px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 699px; top: 225px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 701px; top: 237px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 706px; top: 255px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 719px; top: 255px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 737px; top: 245px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 732px; top: 233px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 640px; top: 382px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 663px; top: 397px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 623px; top: 407px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
+                    <span style="left: 644px; top: 415px; border-color: #ff0000; background-color: white; width: 12px; height: 12px;" class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-monitoreo d-none"
