--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -60,12 +60,7 @@
             </div>
             <div class="col-xs-12 col-lg-6">
               <div class="container-video-yt">
-                <iframe width="1280" height="720"
-                  src="https://www.youtube.com/embed/1Hgtm8de92I"
-                  title="Visita de clientes a Vasconia" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen></iframe>
+                <iframe width="1449" height="629" src="https://www.youtube.com/embed/zRpdBCub3tQ" title="Estación Cusiana - Ocensa" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
