--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -69,13 +69,7 @@
                         </div>
                         <div class="col-xs-12 col-lg-6">
                             <div class="container-video-yt">
-                                <iframe width="1280" height="720"
-                                    src="https://www.youtube.com/embed/1Hgtm8de92I"
-                                    title="Visita de clientes a Vasconia"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                    referrerpolicy="strict-origin-when-cross-origin"
-                                    allowfullscreen></iframe>
+                                <iframe width="1470" height="629" src="https://www.youtube.com/embed/Z92MVSm_NGM" title="Estación El Porvenir - Ocensa" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
