--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -5210,7 +5210,9 @@
                   </h5>
                   <p class="text-light">(Resolución 952 de 1995)</p>
                   <a class="button-oc-2024 color-light my-2 d-inline-block"
-                    href>Ver más</a>
+                    href="/assets/docs/licencia-ambiental-ocensa-952.pdf"
+                    target="_blank"
+                    >Ver más</a>
                 </div>
               </div>
 
@@ -5227,7 +5229,9 @@
                   </h5>
                   <p class="text-light">(Resolución 1095 de 2012)</p>
                   <a class="button-oc-2024 color-light my-2 d-inline-block"
-                    href>Ver más</a>
+                    href="/assets/docs/resolucion-1095-de-2012.pdf"
+                    target="_blank"
+                    >Ver más</a>
                 </div>
               </div>
 
