--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -7628,7 +7628,9 @@
                   <p class="text-light">(Resolución 952 de 1995)</p>
                   <a
                     class="button-oc-2024 color-light my-2 d-inline-block"
-                    href>Ver más</a>
+                    href="/assets/docs/licencia-ambiental-ocensa-952.pdf"
+                    target="_blank"
+                    >Ver más</a>
                 </div>
               </div>
 
@@ -7647,7 +7649,9 @@
                   <p class="text-light">(Resolución 1095 de 2012)</p>
                   <a
                     class="button-oc-2024 color-light my-2 d-inline-block"
-                    href>Ver más</a>
+                    href="/assets/docs/licencia-ambiental-ocensa-952.pdf"
+                    target="_blank"
+                    >Ver más</a>
                 </div>
               </div>
 
