--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -5959,7 +5959,9 @@
                                         1995)</p>
                                     <a
                                         class="button-oc-2024 color-light my-2 d-inline-block"
-                                        href>Ver más</a>
+                                        href="/assets/docs/licencia-ambiental-ocensa-952.pdf"
+                                        target="_blank"
+                                        >Ver más</a>
                                 </div>
                             </div>
 
@@ -5979,7 +5981,9 @@
                                         2012)</p>
                                     <a
                                         class="button-oc-2024 color-light my-2 d-inline-block"
-                                        href>Ver más</a>
+                                        href="/assets/docs/resolucion-1095-de-2012.pdf"
+                                        target="_blank"
+                                        >Ver más</a>
                                 </div>
                             </div>
 
