fix: ajustes coveñas

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -37,7 +37,7 @@
               </h1>
               <h2
                 class="banner-principal__subtitle text-light font-weight-bold">
-                Línea sur / Segmento 1
+                Línea norte / Segmento 3
               </h2>
               <p class="banner-principal__description text-light">
                 En Coveñas, Sucre, terminan 836 km de oleoducto subterráneo y
@@ -214,20 +214,18 @@
             <div
               class="card-ocensa-carousel position-relative custom-dots-2024">
               <div class="px-1">
+                <h6 class="m-0">Residuos Aprovechables</h6>
+                <p class="number-large font-weight-bold">349.410</p>
+                <span
+                  class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-2">KG</span>
+              </div>
+              <div class="px-1">
                 <h6 class="m-0">Huella Hídrica Coveñas</h6>
                 <p class="number-large font-weight-bold">278.597</p>
                 <p class="text-gray-light-ocensa">HH TOTAL OCENSA 2022</p>
                 <span
                   class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-1">4.024.403</span>
               </div>
-
-              <div class="px-1">
-                <h6 class="m-0">Residuos Aprovechables</h6>
-                <p class="number-large font-weight-bold">349.410</p>
-                <span
-                  class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-2">KG</span>
-              </div>
-
               <div class="px-1">
                 <h6 class="m-0">Huella Hídrica Total</h6>
                 <p class="number-large font-weight-bold">4.024.403</p>
