fix: ajustes cusiana

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -89,7 +89,7 @@
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
                     <b>La estación aporta el 50%</b> de los volúmenes
-                    transportados por el oleoducto.
+                    transportados por el Oleoducto.
                   </p>
                 </div>
               </div>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
-                    Recibe la producción de petróleo crudo de los campos:
+                    Recibe la producción de <b>petróleo crudo</b> de los campos:
                     <ul class="d-flex flex-row flex-wrap p-0 pl-3 text-light">
                       <li style="--color-marker: #e3ff00"
                         class="mr-4 custom-color-marker p-0">Cusiana</li>
