fix: ajustes miraflores

--- a/pages/miraflores/index.html
+++ b/pages/miraflores/index.html
@@ -95,7 +95,7 @@
                                 </div>
                                 <div class="col-xs-12 col-md-9 px-2">
                                     <p class="text-light">
-                                        La estación aporta el La estación Miraflores se considera una estación <b>impulsora o de re-bombeo</b>.
+                                        La estación Miraflores se considera una estación <b>impulsora o de re-bombeo</b>.
                                     </p>
                                 </div>
                             </div>
@@ -114,7 +114,7 @@
                                     <p class="text-light">
                                         Recibe crudo de las estaciones
                                         <ul
-                                            class="d-flex flex-row flex-wrap p-0 pl-3 text-light">
+                                            class="d-flex flex-row flex-wrap p-0 pl-3 text-light m-0">
                                             <li style="--color-marker: #e3ff00"
                                                 class="mr-4 custom-color-marker p-0 font-weight-bold">El Porvenir</li>
                                             <li style="--color-marker: #e3ff00"
