--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -102,7 +102,7 @@
                                     <p class="text-light">
                                         <b>El porvenir es una estación de:</b>
                                         <ul
-                                            class="p-0 pl-3 text-light">
+                                            class="p-0 pl-3 text-light m-0">
                                             <li style="--color-marker: #e3ff00"
                                                 class="mr-4 custom-color-marker p-0">Recibo</li>
                                             <li style="--color-marker: #e3ff00"
@@ -110,6 +110,7 @@
                                             <li style="--color-marker: #e3ff00"
                                                 class="mr-4 custom-color-marker p-0">Despacho</li>
                                         </ul>
+                                        <span class="text-light">De los diferentes tipos de crudo.</span>
                                     </p>
                                 </div>
                             </div>
