feat (cusiana): Agrega ubicaciones en el mapa Gestion integral del agua en El Porvenir

--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -5361,13 +5361,19 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-8">
                                         <span
-                                            style="--outline-color: #8d12ff; left: 604px; top: 298px;"
+                                            style="--outline-color: #8d12ff; left: 358px; top: 310px;"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #8d12ff; left: 623px; top: 397px;"
+                                            style="--outline-color: #8d12ff; left: 402px; top: 265px;"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #8d12ff; left: 603px; top: 394px;"
+                                            style="--outline-color: #8d12ff; left: 469px; top: 373px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #8d12ff; left: 541px; top: 275px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #8d12ff; left: 698px; top: 361px;"
                                             class="location-map-dot"></span>
                                     </div>
 
@@ -5375,7 +5381,7 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-9">
                                         <span
-                                            style="--outline-color: #5dffa5; left: 623px; top: 377px;"
+                                            style="--outline-color: #5dffa5; left: 645px; top: 398px;"
                                             class="location-map-dot"></span>
                                     </div>
 
@@ -5383,7 +5389,7 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-10">
                                         <span
-                                            style="--outline-color: #fc10ff; left: 860px; top: 269px;"
+                                            style="--outline-color: #fc10ff; left: 788px; top: 240px;"
                                             class="location-map-dot"></span>
                                     </div>
 
@@ -5391,7 +5397,7 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-11">
                                         <span
-                                            style="--outline-color: #f9a8ff; left: 630px; top: 393px"
+                                            style="--outline-color: #f9a8ff; left: 577px; top: 366px"
                                             class="location-map-dot"></span>
                                     </div>
 
