feat (cusiana): Agrega ubicaciones en el mapa Gestion integral del resoduos en El Porvenir

--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -5453,16 +5453,16 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-13">
                                         <span
-                                            style="--outline-color: #b15b21; left: 670px; top: 193px"
+                                            style="--outline-color: #b15b21; left: 406px; top: 248px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #b15b21; left: 750px; top: 229px"
+                                            style="--outline-color: #b15b21; left: 720px; top: 233px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #b15b21; left: 565px; top: 274px"
+                                            style="--outline-color: #b15b21; left: 813px; top: 255px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #b15b21; left: 637px; top: 424px"
+                                            style="--outline-color: #b15b21; left: 789px; top: 385px"
                                             class="location-map-dot"></span>
 
                                     </div>
@@ -5471,7 +5471,7 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-14">
                                         <span
-                                            style="--outline-color: #a59eff; left: 441px; top: 252px;"
+                                            style="--outline-color: #a59eff; left: 533px; top: 271px;"
                                             class="location-map-dot"></span>
                                     </div>
 
@@ -5479,7 +5479,22 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-15">
                                         <span
-                                            style="--outline-color: #ffa921; left: 580px; top: 283px;"
+                                            style="--outline-color: #ffa921; left: 401px; top: 261px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ffa921; left: 642px; top: 267px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ffa921; left: 704px; top: 244px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ffa921; left: 737px; top: 236px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ffa921; left: 761px; top: 228px;"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ffa921; left: 785px; top: 222px;"
                                             class="location-map-dot"></span>
                                     </div>
 
