feat (cusiana): Agrega ubicaciones en el mapa Cambio climático en El Porvenir

--- a/pages/el-porvenir/index.html
+++ b/pages/el-porvenir/index.html
@@ -5405,46 +5405,64 @@
                                         class="dots-map-2024 dots-monitoreo d-none"
                                         id="cusiana-monitoreo-12">
                                         <span
-                                            style="--outline-color: #ff7171; left: 468px; top: 204px"
+                                            style="--outline-color: #ff7171; left: 358px; top: 266px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 481px; top: 192px"
+                                            style="--outline-color: #ff7171; left: 397px; top: 294px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 485px; top: 208px"
+                                            style="--outline-color: #ff7171; left: 428px; top: 324px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 506px; top: 206px"
+                                            style="--outline-color: #ff7171; left: 452px; top: 241px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 514px; top: 193px"
+                                            style="--outline-color: #ff7171; left: 474px; top: 253px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 606px; top: 235px"
+                                            style="--outline-color: #ff7171; left: 511px; top: 240px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 616px; top: 210px"
+                                            style="--outline-color: #ff7171; left: 523px; top: 258px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 617px; top: 240px"
+                                            style="--outline-color: #ff7171; left: 521px; top: 276px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 624px; top: 276px"
+                                            style="--outline-color: #ff7171; left: 500px; top: 390px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 652px; top: 209px"
+                                            style="--outline-color: #ff7171; left: 552px; top: 277px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 656px; top: 240px"
+                                            style="--outline-color: #ff7171; left: 613px; top: 294px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 661px; top: 276px"
+                                            style="--outline-color: #ff7171; left: 631px; top: 305px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 707px; top: 212px"
+                                            style="--outline-color: #ff7171; left: 645px; top: 264px"
                                             class="location-map-dot"></span>
                                         <span
-                                            style="--outline-color: #ff7171; left: 785px; top: 202px"
+                                            style="--outline-color: #ff7171; left: 631px; top: 287px"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ff7171; left: 707px; top: 366px"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ff7171; left: 727px; top: 354px"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ff7171; left: 716px; top: 247px"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ff7171; left: 754px; top: 243px"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ff7171; left: 813px; top: 355px"
+                                            class="location-map-dot"></span>
+                                        <span
+                                            style="--outline-color: #ff7171; left: 825px; top: 343px"
                                             class="location-map-dot"></span>
 
                                     </div>
